--- a/index.html
+++ b/index.html
@@ -50,9 +50,15 @@
             <img src="https://images.unsplash.com/photo-1555597673-b21d5c935865?w=1920&q=80" alt="Treino de Hapkido" class="hero-image">
         </div>
         <div class="hero-content">
+            <div class="hero-content">
+
+    <div class="hero-logo">
+        <img src="img/logo.jpg" alt="Logo Associação Punho de Aço">
+    </div>
+
             <h1 class="hero-title animate-fade-in">ASSOCIAÇÃO PUNHO DE AÇO</h1>
             <p class="hero-subtitle animate-fade-in-delay">HAPKIDO — DEFESA PESSOAL, DISCIPLINA E CONTROLE</p>
-            <a href="https://wa.me/5594000000000?text=Ol%C3%A1%2C%20quero%20fazer%20uma%20aula%20experimental%20de%20Hapkido." class="btn btn-primary animate-fade-in-delay-2" target="_blank">
+            <a href="https://wa.me/559492842818?text=Ol%C3%A1%2C%20quero%20fazer%20uma%20aula%20experimental%20de%20Hapkido." class="btn btn-primary animate-fade-in-delay-2" target="_blank">
                 <i class="fab fa-whatsapp"></i> COMEÇAR
             </a>
         </div>
@@ -68,9 +74,8 @@
                 <div class="about-image animate-on-scroll">
                     <!-- Placeholder para foto da academia -->
                     <div class="image-placeholder">
-                        <i class="fas fa-university"></i>
-                        <p>Foto da Academia</p>
-                    </div>
+    <img src="img/logo.jpg" alt="Logo Associação Punho de Aço">
+</div>
                 </div>
                 <div class="about-text animate-on-scroll">
                     <h2 class="section-title">Sobre a Academia</h2>
@@ -97,9 +102,8 @@
                 <div class="master-image animate-on-scroll">
                     <!-- Placeholder para foto do Mestre Germano -->
                     <div class="image-placeholder master-placeholder">
-                        <i class="fas fa-user-ninja"></i>
-                        <p>Mestre Germano</p>
-                    </div>
+    <img src="img/mestre.jpg" alt="Mestre Germano">
+</div>
                 </div>
                 <div class="master-info animate-on-scroll">
                     <h3 class="master-name">Mestre Germano</h3>
