--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="hero-content">
 
     <div class="hero-logo">
-        <img src="img/logo.jpg" alt="Logo Associação Punho de Aço">
+        <img src="img/logo.png" alt="Logo Associação Punho de Aço">
     </div>
 
             <h1 class="hero-title animate-fade-in">ASSOCIAÇÃO PUNHO DE AÇO</h1>
@@ -74,7 +74,7 @@
                 <div class="about-image animate-on-scroll">
                     <!-- Placeholder para foto da academia -->
                     <div class="image-placeholder">
-    <img src="img/logo.jpg" alt="Logo Associação Punho de Aço">
+    <img src="img/logo.png" alt="Logo Associação Punho de Aço">
 </div>
                 </div>
                 <div class="about-text animate-on-scroll">
@@ -102,7 +102,7 @@
                 <div class="master-image animate-on-scroll">
                     <!-- Placeholder para foto do Mestre Germano -->
                     <div class="image-placeholder master-placeholder">
-    <img src="img/mestre.jpg" alt="Mestre Germano">
+    <img src="img/mestre.png" alt="Mestre Germano">
 </div>
                 </div>
                 <div class="master-info animate-on-scroll">
